refactored lineviewer, more defensive Vic3 parsing and general save handling

--- a/src/app/mc/mega-campaign/mega-campaign.component.html
+++ b/src/app/mc/mega-campaign/mega-campaign.component.html
@@ -54,6 +54,9 @@
                     <div class="plot-container">
                         <app-plot-view [plotablesInput]="traitPlotables" [titleInput]="'Player Ruler Traits'"></app-plot-view>
                     </div>
+                    <div class="lines-plot-container">
+                        <app-lineviewer [data]="seriesData"></app-lineviewer>
+                    </div>
                 }
             }
         }
