lineviewer now takes Date X values instead of numbers and scale can be toggled

--- a/src/app/mc/mega-campaign/mega-campaign.component.html
+++ b/src/app/mc/mega-campaign/mega-campaign.component.html
@@ -55,7 +55,9 @@
                         <app-plot-view [plotablesInput]="traitPlotables" [titleInput]="'Player Ruler Traits'"></app-plot-view>
                     </div>
                     <div class="lines-plot-container">
-                        <app-lineviewer [data]="seriesData"></app-lineviewer>
+                        @if (seriesData) {
+                            <app-lineviewer [data]="seriesData"></app-lineviewer>
+                        }
                     </div>
                 }
             }
