--- a/src/app/lineviewer/lineviewer.component.scss
+++ b/src/app/lineviewer/lineviewer.component.scss
@@ -92,7 +92,7 @@
     align-items: center;
     padding: 16px;
     min-height: 56px;
-    width: 50%;
+    flex: 1;
     
     mat-slider {
         flex: 1;
