--- a/src/app/mc/mcsignup/mcsignup.component.scss
+++ b/src/app/mc/mcsignup/mcsignup.component.scss
@@ -3,6 +3,7 @@
 
 :host {
     color: var(--text-color);
+    background-color: var(--background-color);
     width: 100%;
     height: 100%;
     display: flex;
