--- a/src/app/saveanalysis/save-view-splash/save-view-splash.component.scss
+++ b/src/app/saveanalysis/save-view-splash/save-view-splash.component.scss
@@ -1,11 +1,12 @@
 :host {
     width: 100%;
-    height: 100%;
+    flex: 1;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    overflow: auto;
 }
 
 .chute {
