--- a/src/app/slab-map-view/slab-map-view.component.html
+++ b/src/app/slab-map-view/slab-map-view.component.html
@@ -1,4 +1,4 @@
 <app-polygon-select #polygonSelect [colorConfigProviders]="colorConfigProviders"
-    [selectionCallback]="selectionCallback" [tooltipProvider]="currentTooltipProvider"
+    [tooltipProvider]="currentTooltipProvider"
     [meshBuddiesProvider]="meshBuddiesProvider" [customButtons]="customButtonsForPolySelect"
     (buttonClicked)="onCustomButtonClick($event)"></app-polygon-select>
