--- a/src/app/saveanalysis/save-view-splash/save-view-splash.component.scss
+++ b/src/app/saveanalysis/save-view-splash/save-view-splash.component.scss
@@ -42,6 +42,17 @@
     box-shadow: 0 0 10px var(--text-color) inset, 0 0 10px var(--text-color);
 }
 
+.saves-selector {
+    margin-bottom: 2rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    mat-form-field {
+        width: 300px;
+    }
+}
+
 .splash-spinner-overlay {
     display: flex;
     flex-direction: column;
